# chem281-fall2024-lab2-chem-281-lab2

./: .gitignore  README.md  develop_container.sh
example_library/: CMakeLists.txt  README.md
example_library/include/: linear_alg.h
example_library/src/: linear_alg.cpp  main.cpp
example_library/test/: linear_alg_test.cpp
